--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -33,7 +33,7 @@
                   <i class="fab fa-instagram fa-3x"></i>
                 </a> -->
             <a class="footer-section-content-link-icon"
-              href="https://www.youtube.com/user/TanztheaterAnitaHank/videos?view=0&sort=dd&flow=grid">
+              href="https://www.youtube.com/channel/UCDYwtpqlpfW1hGxjur1T5xQ">
               <i class="fab fa-youtube fa-3x"></i>
             </a>
           </div>
