--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -48,13 +48,13 @@
 
       </div>
       <div class="navbar-navigation">
-        <a class="navbar-navigation-link" (click)="goTo('section01')">Rückengymnastik
+        <a class="navbar-navigation-link" (click)="goTo('section01')">Rücken-Fit
         </a>
         <a class="navbar-navigation-link" (click)="goTo('section02')">
-          Nordic Walking
+          Nordic-Walking
         </a>
         <a class="navbar-navigation-link" (click)="goTo('section03')">
-          Ernährungsberatung
+          Ernährungs-Beratung
         </a>
         <a class="navbar-navigation-link" (click)="goTo('section04')">
           Kontakt
