--- a/src/variables.scss
+++ b/src/variables.scss
@@ -4,18 +4,18 @@
 
 $header-link-color: #f2f2f2;
 $header-hover-background-color: #595959;
-$main-text-color: #f24139;
-$secondary-text-color: #f24139;
+$main-text-color: #252525;
+$secondary-text-color: #49a579;
 $main-text-color-on-dark-bg: #ffffff;
 $main-text-color-on-light-bg: #252525;
-$post-seperator-color: #8c8c8c;
-$accent-color-1: #595959;
-$main-background-color: #ffebcc;
+$post-seperator-color: #979797;
+$accent-color-1: #49a579;
+$main-background-color: #f4f0f0;
 $main-background-color-dark: #000000;
 $main-background-color-imprint: #1b1b1b;
 $main-background-color-light: #f0f0f0;
 $download-link-color: #dbd6d6;
-$secondary-background-color: #fff7ea;
+$secondary-background-color: #ffffff;
 $background-color-dark-2: #ff827c;
 $background-color-dark-3: #0f0f0f;
 $border-color-dark-2: #2c2c2c;
