Add sponsor logos and links

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,5 +1,34 @@
 <div class="footer-container" *ngIf="footerContentLoaded && mainPageContentLoaded">
   <div class="footer">
+    <div class="foerderung-wrapper">
+      <div class="foerderer-label">
+        Förderer
+      </div>
+      <div class="foerderung-container mobile">
+        <a class="foerderung foerderung-01" href="http://www.dachverband-tanz.de/" target="_blank">
+  
+        </a>
+        <a class="foerderung foerderung-03" href="www.kulturstaatsministerin.de" target="_blank">
+          
+        </a>
+        <a class="foerderung foerderung-02" href="https://www.kulturstaatsministerin.de/neustartkultur" target="_blank">
+          
+        </a>
+      </div>
+      <div class="foerderung-container desktop">
+        <a class="foerderung foerderung-01" href="http://www.dachverband-tanz.de/" target="_blank">
+  
+        </a>
+        <a class="foerderung foerderung-02" href="https://www.kulturstaatsministerin.de/neustartkultur" target="_blank">
+          
+        </a>
+        <a class="foerderung foerderung-03" href="www.kulturstaatsministerin.de" target="_blank">
+          
+        </a>
+      </div>
+    </div>
+  </div>
+  <div class="footer">
     <div class="footer-section-container">
       <div class="footer-section footer-section-contact">
         <div class="footer-section-heading">
@@ -35,13 +64,13 @@
             Social Media
         </div>
         <div class="footer-section-content footer-section-content-social">
-          <a class="footer-section-content-link-icon" href="https://www.facebook.com/Tanztheater/">
+          <a class="footer-section-content-link-icon" href="https://www.facebook.com/Tanztheater/" target="_blank">
             <i class="fab fa-facebook-square fa-3x"></i>
           </a>
-          <a class="footer-section-content-link-icon" href="https://www.instagram.com/das_tanztheater/">
+          <a class="footer-section-content-link-icon" href="https://www.instagram.com/das_tanztheater/" target="_blank">
             <i class="fab fa-instagram fa-3x"></i>
           </a>
-          <a class="footer-section-content-link-icon" href="https://www.youtube.com/user/TanztheaterAnitaHank/videos?view=0&sort=dd&flow=grid">
+          <a class="footer-section-content-link-icon" href="https://www.youtube.com/user/TanztheaterAnitaHank/videos?view=0&sort=dd&flow=grid" target="_blank">
             <i class="fab fa-youtube fa-3x"></i>
           </a>
         </div>
