--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -9,6 +9,44 @@
         width: 100%; /* Full width */
         z-index: 10;
         color: $main-text-color;
+        .foerderung-wrapper {
+            width: 100%;
+            margin-bottom: 50px;
+            .foerderer-label {
+                text-align: center;
+                margin-bottom: 20px;
+                font-size: 20px;
+                font-weight: 600;
+                color: $main-text-color;
+                text-decoration: none;
+            }
+            .foerderung-container {
+                width: 100%;
+                &.desktop {
+                    display: none;
+                }
+                &.mobile {
+                    display: flex;
+                    flex-direction: column;
+                }
+                .foerderung {
+                    height: 100px;
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    margin-bottom: 20px;
+                }
+                .foerderung-01 {
+                    background-image: url("./../../../resources/dachverband-tanz.png");
+                }
+                .foerderung-02 {
+                    background-image: url("./../../../resources/neu-start-kultur.svg");
+                }
+                .foerderung-03 {
+                    background-image: url("./../../../resources/bundesregierung.png");
+                }
+            }
+        }
+        
         .footer-section-container {
             .footer-section {
                 text-align: center;
@@ -91,6 +129,24 @@
             max-width: $media-breakpoint-md;
             margin: 0 auto;
             @include flexbox();
+            .foerderung-wrapper {
+                margin-bottom: 100px;
+                .foerderer-label {
+                    margin-bottom: 40px;
+                    text-align: left;
+                }
+                .foerderung-container {
+                    &.desktop {
+                        display: flex;
+                    }
+                    &.mobile {
+                        display: none;
+                    }
+                    .foerderung {
+                        flex: 1;
+                    }
+                }
+            }
             .footer-section-container {
                 width: 33%;
                 @include flexbox();
